--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "devDependencies": {
-    "@types/node": "^14.14.35"
+  "dependencies": {
+    "@types/node": "^20.5.0"
   }
 }
