Upgrade most of the Ada examples to Ada 2022

--- a/ada/alire.toml
+++ b/ada/alire.toml
@@ -7,3 +7,6 @@ maintainers = ["rtoal <rtoal@lmu.edu>"]
 maintainers-logins = ["rtoal"]
 licenses = "MIT"
 website = "https://github.com/rtoal/ple"
+
+[build-switches]
+"*".ada_version = ["-gnat2022"]
